--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
       	<artifactId>jackson-core</artifactId>
       </dependency>
       <dependency>
+    	<groupId>com.github.ulisesbocchio</groupId>
+    	<artifactId>jasypt-spring-boot-starter</artifactId>
+    	<version>2.0.0</version>
+	  </dependency>
+      <dependency>
       	<groupId>javax.xml.bind</groupId>
       	<artifactId>jaxb-api</artifactId>
       	<version>2.3.0</version>
