--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,23 @@
-spring.datasource.url=mysql url
-spring.datasource.username=username
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://database-2.cdl7ygelwbuo.us-west-1.rds.amazonaws.com/sci-cafe?serverTimezone=America/Los_Angeles&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username= admin	
+spring.datasource.password= scicafe.com
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
-
-spring.servlet.multipart.max-file-size=100MB
-spring.servlet.multipart.max-request-size=100MB
-
-server.port= port
+server.port=5000
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jackson.serialization.indent_output=true
 
-scicafe.api.url = api url
-scicafe.jwt.secret = jwt secret
-scicafe.email.host = email host
-scicafe.email.port = email port
-scicafe.email.address = email address
-scicafe.email.password = email password
+scicafe.api.url = https://api.sci-cafe.com
+scicafe.client.url = https://www.sci-cafe.com
+scicafe.jwt.secret = c3bff416-983f-4461-9275-132b22136944
+scicafe.email.host = smtp.gmail.com
+scicafe.email.port = 587
+scicafe.email.address = scicafenotification@gmail.com
+scicafe.email.password = scicafe.com
+
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+
+jasypt.encryptor.password = EbfYkitulv73I2p0mXI50JMXoaxZTKJ7
